[tool.poetry]
name = "m2-h05"
version = "0.1.0"
description = ""
authors = ["Dmytro Filin <dmitriy.fillin@gmail.com>"]
readme = "README.md"
packages = [{include = "m2_h05"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
